--- a/dis_example.ipynb
+++ b/dis_example.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "---\n",
     "## **CPython-Bytecode**\n",
+    "by Tobia Ippolito\n",
+    "\n",
     "---\n",
     "### Show Byte-Code"
    ]
@@ -118,7 +120,7 @@
    "hash": "96a5d84734c2fcc0f1c4e29111ed2080412c48bc33f767562c76143427b08200"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -133,9 +135,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.1"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
