ADDED String AST example
- Secure math expr execution

--- a/ast_example.ipynb
+++ b/ast_example.ipynb
@@ -44,14 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import showast\n",
     "import ast\n",
     "\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import math"
    ]
   },
   {
@@ -80,6 +81,16 @@
    "source": [
     "%%showast\n",
     "x = 1 + 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%showast\n",
+    "Math.sin(1)*33"
    ]
   },
   {
@@ -141,6 +152,132 @@
     "print(v)\n",
     "print(ast.dump(code))\n",
     "print(code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Practical:** Secure Math-Console\n",
+    "User gives a mathimatical expression as input and this expression will be exectuted by Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helper:\n",
+    "# add math. by mathimatical expressions\n",
+    "def add_math_functions(code:str):\n",
+    "    to_modify = ['sin', 'cos', 'tan', 'acos', 'asin', 'atan', 'pi', 'e', 'exp', 'log', 'pow', 'sqrt', 'dist',\n",
+    "                 'degrees', 'radians', 'inf', 'floor', 'factorial']\n",
+    "\n",
+    "    for name in to_modify:\n",
+    "            code = code.replace(name, f\"math.{name}\")\n",
+    "    return code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How not:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def math_console():\n",
+    "    while True:\n",
+    "        user_input = input(\"User:\")\n",
+    "        if user_input == 'exit' or user_input == 'x':\n",
+    "            break\n",
+    "        else:\n",
+    "            # add math. for sin, cos,...\n",
+    "            user_input = add_math_functions(user_input)\n",
+    "\n",
+    "            # execute expression\n",
+    "            result = eval(user_input)\n",
+    "            print(f\"{user_input} = {result}\")\n",
+    "\n",
+    "math_console()\n",
+    "# 1 + 3\n",
+    "# 3 // 5\n",
+    "# sys.exit()\n",
+    "# delete dirs\n",
+    "# and many more..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How to:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_math_expr(code:str):\n",
+    "     tree = ast.parse(code, '', mode='eval')\n",
+    "     walk = ast.walk(tree)\n",
+    "     if isinstance(next(walk), ast.Expression):\n",
+    "            if isinstance(next(walk), ast.BinOp):\n",
+    "                  return True\n",
+    "     return False\n",
+    "\n",
+    "def execute_math_expr(code:str):\n",
+    "      # add math. for sin, cos,...\n",
+    "      code = add_math_functions(code)\n",
+    "\n",
+    "      # check and execute the expression              \n",
+    "      if check_math_expr(code):\n",
+    "            tree = ast.parse(code, '', mode='eval')\n",
+    "            result = eval(compile(tree, '', mode='eval'))\n",
+    "            return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This wasn't a mathimatical expression!\n",
+      "1+1+2+floor(3.0) = 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def math_console():\n",
+    "    while True:\n",
+    "        user_input = input(\"User:\")\n",
+    "        if user_input == 'exit' or user_input == 'x':\n",
+    "            break\n",
+    "        else:\n",
+    "            result = execute_math_expr(user_input)\n",
+    "            if result != None:\n",
+    "                print(f\"{user_input} = {result}\")\n",
+    "            else:\n",
+    "                print(\"This wasn't a mathimatical expression!\")\n",
+    "\n",
+    "math_console()\n",
+    "# 1 + 3\n",
+    "# 3 // 5\n",
+    "# sys.exit() not possible\n",
+    "# delete dirs not possible\n",
+    "# and many more are not possible"
    ]
   },
   {
