--- a/ast_example.ipynb
+++ b/ast_example.ipynb
@@ -14,6 +14,7 @@
     "- [Load Modules](#0.5)\n",
     "- [Show AST](#1.0)\n",
     "- [Execute String as Python-Code](#2.0)\n",
+    "- [Secure Math-Console](#2.5)\n",
     "- [Use AST with Enviroments](#3.0)\n",
     "- [Analysis with the AST](#4.0)\n",
     "<br>\n",
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,13 +159,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Practical:** Secure Math-Console\n",
+    "### **Practical:** <a name=\"2.5\">Secure Math-Console</a>\n",
     "User gives a mathimatical expression as input and this expression will be exectuted by Python."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,12 +218,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How to:"
+    "How to:<br>\n",
+    "<br>\n",
+    "Use the AST to check the Python-Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,6 +243,8 @@
     "\n",
     "      # check and execute the expression              \n",
     "      if check_math_expr(code):\n",
+    "            # would work also: -> you checked the str already\n",
+    "            # eval(code)\n",
     "            tree = ast.parse(code, '', mode='eval')\n",
     "            result = eval(compile(tree, '', mode='eval'))\n",
     "            return result"
@@ -247,18 +252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This wasn't a mathimatical expression!\n",
-      "1+1+2+floor(3.0) = 7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def math_console():\n",
     "    while True:\n",
