--- a/dis_example.ipynb
+++ b/dis_example.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "def polite_message():\n",
-    "    message = \"moin\"\n",
+    "    message = \"Hello World!\"\n",
     "    print(message)\n",
     "\n",
     "dis(polite_message)"
