change to eval in practical example

--- a/ast_example.ipynb
+++ b/ast_example.ipynb
@@ -90,16 +90,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%showast\n",
-    "Math.sin(1)*33"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def polite_message():\n",
     "    print(\"Moin moin Freunde des Programmierens!\")\n",
     "\n",
@@ -200,7 +190,7 @@
     "            break\n",
     "        else:\n",
     "            # add math. for sin, cos,...\n",
-    "            user_input = add_math_functions(user_input)\n",
+    "            # user_input = add_math_functions(user_input)\n",
     "\n",
     "            # execute expression\n",
     "            result = eval(user_input)\n",
@@ -238,14 +228,14 @@
     "\n",
     "def execute_math_expr(code:str):\n",
     "      # add math. for sin, cos,...\n",
-    "      code = add_math_functions(code)\n",
+    "      # code = add_math_functions(code)\n",
     "\n",
     "      # check and execute the expression              \n",
     "      if check_math_expr(code):\n",
     "            # would work also: -> you checked the str already\n",
-    "            # eval(code)\n",
-    "            tree = ast.parse(code, '', mode='eval')\n",
-    "            result = eval(compile(tree, '', mode='eval'))\n",
+    "            result = eval(code)\n",
+    "            # tree = ast.parse(code, '', mode='eval')\n",
+    "            # result = eval(compile(tree, '', mode='eval'))\n",
     "            return result"
    ]
   },
